# WeatherAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: configuration.py  db.py  limiter.py  routes.py  setup.py
